// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AttentionPlugin Changed dependencies 1`] = `
Array [
  Array [
    "patch",
    "-   Bumped **[test](https://www.npmjs.com/package/test/v/1.1.0)** from \`1.0.0\` to \`1.1.0\`",
  ],
]
`;

exports[`AttentionPlugin Changed license 1`] = `
Array [
  Array [
    "patch",
    "Source code now under \`MIT\` license.",
  ],
]
`;
